fix: squished css to fit 120 line limit

--- a/challenges/week-5/style.css
+++ b/challenges/week-5/style.css
@@ -2,21 +2,17 @@ body{
     color: #33383D;
     margin: 0;
 }
-
 .responsive-box{
     display: flex;
     margin: 8% 2% 0 7%;
     gap: 2%;
 }
-
 .text-box{
     display: flex;
     flex-direction: column;
     order: 0;
     width: 25%;
 }
-
-/* font desktop size: 3.3% of height */
 .header{
     font-size: 61px;
     font-weight: 700;
@@ -24,71 +20,56 @@ body{
     letter-spacing: 0.02em;
     margin: 24px 0;
 }
-
-/* font desktop size: 1.1% of height */
 .paragraph{
     font-size: 18px;
     font-weight: 400;
     line-height: 169%;
     letter-spacing: 0.04em;
 }
-
 .photo-box{
     display: flex;
     order: 1;
     width: 75%;
 }
-
 .image-and-overlay{
     position: relative;
     width: 100%;
     height: 100%;
     background-color: #000000;
 }
-
 .image{
     object-fit: cover;
     width: 100%;
     height: 100%;
     opacity: 1;
 }
-
-
 .overlay-div{
     display: none;
 }
-
 .overlay-header{
     display: flex;
     font-size: 200%;
     line-height: 152%;
 }
-
 .overlay-text{
     display: flex;
     font-size: 131%;
     line-height: 169%;
 }
-
-/* setting up overlay for tablet & desktop */
 @media screen and (min-width: 767px){
     .image-and-overlay{
         transition-duration: 500ms;
     }
-
     .image{
         transition-duration: inherit;
         transition-property: opacity;
     }
-
     .image-and-overlay:hover > .image{
         opacity: 0.35;
     }
-
     .image-and-overlay:hover > .overlay-div{
         opacity: 1;
     }
-
     .overlay-div{
         transition-property: opacity;
         transition-duration: 500ms;
@@ -103,61 +84,36 @@ body{
         left: 40%;
     }
 }
-
-/* tablet */
 @media screen and (max-width: 1199px) {
     .responsive-box{
         margin: 2% 2.5% 0 2.5%;
         gap: 6%;
     }
-
     .text-box{
         width: 40%;
     }
-
-    .photo-box{
-        width: 60%;
-    }
-
-    /* lower % due to larger font inside the div */
-    .overlay-div{
-        left: 35%;
-    }
-
-    /* 1.5x desktop width */
-    .overlay-header{
-        font-size: 300%;
-    }
-    
-    /* 1.5x desktop width */
-    .overlay-text{
-        font-size: 196.5%;
-    }
+    .photo-box{ width: 60%; }
+    .overlay-div{ left: 35%; }
+    .overlay-header{ font-size: 300%; }
+    .overlay-text{ font-size: 196.5%; }
 }
-
-/* mobile */
 @media screen and (max-width: 767px) {
     .responsive-box{
         flex-direction: column;
-        /* flex-wrap: nowrap; */
         margin: 2% 4.5%;
     }
-
     .photo-box{
         order: 0;
         width: 100%;
         height: 57.8vh;
         flex-grow: 2;
     }
-
     .text-box{
         width: 100%;
     }
-
     .paragraph{
         margin: 0;
     }
-
     .paragraph{
         font-size: 22px;
     }
